Return frames of list as it is sorting